# navbridge

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: adapter_contracts.md  batch_operations.md  break_classification_guide.md  controls_matrix.md  data_formats.md  data_validation.md  evidence_retention.md  internal_adoption_guide.md  limitations.md  model_risk_and_validation.md  policy_packs.md  report_schema_v1.json  tolerance_policy_guide.md
examples/: batch_portfolio.json
examples/market_hours_scenario/: administrator_nav.csv  config.json  run.py
examples/mmf_scenario/: administrator_nav.csv  config.json  run.py
examples/treasury_fund_scenario/: administrator_nav.csv  config.json  run.py
navbridge/: __init__.py  cli.py
navbridge/administrator/: README.md  __init__.py  base.py  csv_ingester.py  json_ingester.py
navbridge/batch/: __init__.py  runner.py
navbridge/classifier/: __init__.py  decision.py  engine.py  rules.py  types.py
navbridge/core/: __init__.py  divergence.py  fund.py  nav_record.py  report.py  schema.py
navbridge/monitor/: __init__.py  engine.py
navbridge/oracle/: README.md  __init__.py  base.py  simulated.py
policies/: tokenized_mmf_v1.json  tokenized_treasury_v1.json
tests/: test_administrator_ingesters.py  test_audit_manifest.py  test_batch.py  test_classifier.py  test_core.py  test_monitor.py  test_oracle_simulated.py  test_policy_pack.py  test_report_schema.py  test_reporter.py  test_validation.py
(+9 files in other folders)
