[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "navbridge"
version = "0.7.0"
description = "NAV integrity monitoring for tokenized funds and RWA portfolios."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "NavBridge Contributors" }]
keywords = ["rwa", "tokenized-funds", "nav", "oracles", "defi", "reconciliation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Office/Business :: Financial",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
navbridge = "navbridge.cli:main"

[tool.setuptools.packages.find]
include = ["navbridge*"]

[tool.setuptools.package-data]
navbridge = ["py.typed"]
